# data4ai

./: README.md  entrypoint_assistant.py  main.py  pyproject.toml  requirements.txt
app/export/: save.py
app/flows/data4assistant/: main.py
app/flows/data4finetuning/: init.py  main.py
app/openai/: data_setup_constants.py  main.py
app/sections/data_export/: assistant.py  config.py  finetuning.py  main.py  strings.py  utils.py
app/sections/data_import/: config.py  init.py  main.py  strings.py  utils.py
app/sections/system_prompt/: init.py  strings.py
app/sections/validate_data/: main.py  strings.py
app/services/openai/: main.py  test.py  transform.py  validate.py
app/services/scraper/: config.py  main.py
apps/assistant/: main.py  requirements.txt
apps/assistant/services/: data_processing.py  openai.py  scraper.py
apps/finetuning/: config.py  entrypoint.py  init.py  main.py  requirements.txt
apps/finetuning/sections/data_export/: config.py  finetuning.py  init.py  main.py  utils.py
apps/finetuning/sections/data_import/: config.py  strings.py
apps/finetuning/sections/system_prompt/: main.py  utils.py
apps/finetuning/sections/validate_data/: init.py  utils.py
apps/finetuning/services/openai/: main.py
